# espdrone

./: CMakeLists.txt  README.md  package.xml
config/: espdrone.rviz
espdrone_controller/: CMakeLists.txt  package.xml  plugin.xml
espdrone_controller/config/: espdrone.yaml
espdrone_controller/include/espdrone_controller/: handles.h  pid.h  quadrotor_interface.h
espdrone_controller/launch/: controller.launch
espdrone_controller/params/: controller.yaml
espdrone_controller/scripts/: control.py  keyboard_teleop.py  monitor.py  motor_controller.cpp  pid.py  teleop_twist_keyboard.py
espdrone_controller/src/: espdrone_controller.cpp  image_transport_republisher.cpp  motor_controller.cpp  pid.cpp  pose_controller.cpp  quadrotor_interface.cpp  twist_controller.cpp
espdrone_controller_gazebo/: CMakeLists.txt  package.xml  quadrotor_controller_gazebo.xml
espdrone_controller_gazebo/include/espdrone_controller/: quadrotor_hardware_gazebo.h
espdrone_controller_gazebo/src/: quadrotor_hardware_gazebo.cpp
espdrone_controllers/: CMakeLists.txt  package.xml  plugin.xml
espdrone_controllers/launch/: espdrone.launch
espdrone_controllers/params/: controller.yaml
espdrone_controllers/src/: attitude_controller.cpp  position_controller.cpp  velocity_controller.cpp
espdrone_driver/: CMakeLists.txt  package.xml
espdrone_driver/config/: config.yaml  espdrone.rviz  joint_names_espdrone.yaml
espdrone_driver/launch/: display.launch  drones.launch  gazebo.launch  gazebo_rviz.launch  main.launch  main_empty.launch  one_drone.launch  rviz.launch  spawn_drone.launch
espdrone_driver/meshes/: BL_link.STL  BR_link.STL  FL_link.STL  FR_link.STL  base_link.STL  camera_link.STL  pcb_plate_link.STL
espdrone_driver/scripts/: force_plugin.cc  gazebo_modelstates.py  publish_odom.py  publish_vel.py  tf_broadcaster_imu.py
espdrone_driver/urdf/: checking.xacro  espdrone.gazebo.xacro  espdrone.urdf.xacro  gazebo_plugin.xacro  quadrotor_controller.gazebo.xacro  quadrotor_plugins.gazebo.xacro.in  quadrotor_propulsion.gazebo.xacro  quadrotor_sensors.gazebo.xacro
espdrone_gazebo_plugins/: CMakeLists.txt  package.xml
espdrone_interface/: CMakeLists.txt  package.xml
espdrone_interface/include/espdrone_interface/: handles.h  helpers.h  limiters.h  quadrotor_interface.h
espdrone_interface/src/: helpers.cpp  quadrotor_interface.cpp
espdrone_msgs/: CMakeLists.txt  package.xml
espdrone_quadrotor_pose_estimation/: CMakeLists.txt  package.xml
espdrone_quadrotor_pose_estimation/include/espdrone_quadrotor_pose_estimation/: pose_estimation_node.h
espdrone_quadrotor_pose_estimation/src/: main.cpp  pose_estimation_node.cpp
launch/: display.launch  drones.launch  gazebo.launch  gazebo_rviz.launch  main.launch  one_drone.launch  rviz.launch
meshes/: FL_link.STL  FR_link.STL  base_link.STL  camera_link.STL
scripts/: geometry_msgs.msg  publish_vel.py  tf_broadcaster_imu.py
urdf/: espdrone.csv  espdrone.urdf.xacro
