<?xml version="1.0"?>
<package format="2">
  <name>espdrone_controller</name>
  <version>0.0.0</version>
  <description>The espdrone_controller package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="root@todo.todo">root</maintainer>

  <license>TODO</license>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->  
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>espdrone_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>controller_interface</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>espdrone_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>controller_interface</exec_depend>

  <!-- Dependencies needed only for running tests. -->
  <export>
    <controller_interface plugin="${prefix}/plugin.xml"/>
  </export>

</package>
