<?xml version="1.0"?>
<package format="2">
  <name>espdrone_controller_gazebo</name>
  <version>0.0.0</version>
  <description>The espdrone_controller_gazebo package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="leo@todo.todo">leo</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend version_gte="2.3.4">gazebo_ros_control</build_depend>
  <build_depend>espdrone_controller</build_depend>
  <exec_depend version_gte="2.3.4">gazebo_ros_control</exec_depend>
  <exec_depend>espdrone_controller</exec_depend>

  <export>
    <gazebo_ros_control plugin="${prefix}/quadrotor_controller_gazebo.xml"/>
  </export>
</package>
