<?xml version="1.0"?>
<package format="2">
  <name>espdrone_controllers</name>
  <version>0.0.0</version>
  <description>The espdrone_controllers package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="root@todo.todo">root</maintainer>

  <license>TODO</license>
  <build_depend version_gte="1.14.0">control_toolbox</build_depend>
  <build_depend>controller_interface</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>hector_quadrotor_interface</build_depend>
  <build_depend>hector_uav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>topic_tools</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>message_exectime</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend version_gte="1.14.0">control_toolbox</exec_depend>
  <exec_depend>controller_interface</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>hector_quadrotor_interface</exec_depend>
  <exec_depend>hector_uav_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>topic_tools</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <controller_interface plugin="${prefix}/plugin.xml"/>
  </export>

</package>
