<package format="2">
  <name>espdrone_driver</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for espdrone</p>
    <p>This package contains configuration data, 3D models and launch files
for espdrone robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>joint_state_controller</depend>
  <depend>gazebo</depend>
  <depend>gazebo_msgs</depend>
  <depend>gazebo_ros</depend>
  <depend>roscpp</depend>
  
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
  </export>

</package>