<?xml version="1.0"?>
<package>
  <name>espdrone_quadrotor_pose_estimation</name>
  <version>0.3.5</version>
  <description>
    hector_quadrotor_pose_estimation provides a <a href="http://wiki.ros.org/hector_pose_estimation">hector_pose_estimation</a> node and nodelet specialized for hector_quadrotor.
  </description>
  <maintainer email="meyer@fsr.tu-darmstadt.de">Johannes Meyer</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/hector_quadrotor_pose_estimation</url>

  <author email="meyer@fsr.tu-darmstadt.de">Johannes Meyer</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend version_gte="0.2.0">hector_pose_estimation</build_depend>
  <build_depend>espdrone_uav_msgs</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <exec_depend version_gte="0.2.0">hector_pose_estimation</exec_depend>
  <exec_depend>espdrone_uav_msgs</exec_depend>
  <exec_depend>nodelet</exec_depend>

  <!-- Dependencies needed only for execning tests. -->

  <export>
    <nodelet plugin="${prefix}/hector_quadrotor_pose_estimation_nodelets.xml"/>
  </export>

</package>
